# FreeHands

./: .gitignore  FreeHands.bat  INITIAL_AUDIT.md  README.md  calibrate.bat  freehands.bat  pyproject.toml  requirements.txt  run.bat  start.bat
docs/: .nojekyll  demo.html  duck-hunt.html  index.html
docs/assets/: demo.js  duck-hunt.js  gestures-v3.js  gestures.js  style.css  webgazer-loader.js
schema/: profile.schema.json
src/freehands/: __init__.py  __main__.py  config.py  doctor.py  main.py  mediapipe_assets.py
src/freehands/actions/: __init__.py  dispatcher.py
src/freehands/capture/: __init__.py  camera.py
src/freehands/fusion/: __init__.py  channel_priority.py  fusion.py  state_machine.py
src/freehands/gaze/: __init__.py  blink_detector.py  calibration.py  dead_zones.py  head_pose.py  kalman_filter.py  snap_to_grid.py  tracker.py
src/freehands/gestures/: __init__.py  face_tracker.py  (+4 more)
tests/: test_and_fusion.py  test_blink_detector.py  test_channel_priority.py  test_continuous_dictation.py  test_dead_zones.py  test_dictation_intent.py  test_ear_calibration.py  test_face_tracker.py  test_fusion.py  test_gaze_calibration.py  test_gaze_tracker.py  test_gesture_calibration_contract.py  test_gesture_profiles.py  test_hand_fusion.py  test_hand_tracker.py  test_head_pose.py  test_kalman_filter.py  test_knn_calibration.py  test_magnifier.py  test_ocr_text_region_detector.py  test_or_fusion.py  test_pause_hold.py  test_plugins.py  test_profiles.py  test_snap_to_grid.py  test_stabilizer.py  test_state_machine.py  test_virtual_keyboard.py  test_voice_commands.py
(+26 files in other folders)
